# JihadiC

./: CMakeLists.txt  README.md  vcpkg.json
include/: data.h  defs.h  specification.h  token.h
jc/jc-asm/: test.as
src/: data.c  main.c  specification.c  token.c
